# mini-minipic

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  launch_evaluation.slurm  mini-minipic.11192675.err  mini-minipic.11192675.out  pyproject.toml
doc/: code_structure.md  compilation.md  python_tools.md  validation.md
libminipic/: diag.py  run.py  validate.py
libminipic/validation/: antenna.py  antenna_evaluation.py  antenna_heavy.py  b_cst.py  beam.py  beam_evaluation.py  beam_heavy.py  default.py  e_cst.py  thermal.py  thermal_evaluation.py  thermal_heavy.py
scripts/: evaluate.py
slurm/: launch_adastra_mi250.slurm  launch_adastra_mi300.slurm  launch_ruche_a100.slurm  launch_ruche_cpu.slurm  launch_ruche_v100.slurm
src/: main.cpp
src/common/: Backend.hpp  Diagnotics.hpp  ElectroMagn.hpp  Field.hpp  Headers.hpp  Params.cpp  Params.hpp  Particles.hpp  Patch.cpp  Patch.hpp  SubDomain.hpp  Timers.hpp  Tools.cpp  Tools.hpp  Vector.hpp
src/exercise/: Managers.cpp  Operators.cpp
src/kokkos/: Operators.cpp  Operators.hpp  SubDomain.hpp
src/openmp/: Operators.hpp  SubDomain.hpp
src/setups/: Ecst.hpp  antenna_evaluation.cpp  antenna_heavy.cpp  beam.hpp  beam_evaluation.cpp  beam_gpu.hpp  beam_heavy.cpp  beam_task.hpp  box.hpp  default_gpu.hpp  default_task.hpp  filamentation.hpp  imbalance_task.hpp  study_random.hpp  study_sorted.hpp  study_thermal.hpp  thermal_evaluation.cpp  thermal_heavy.cpp  thin_foil.hpp  thin_foil_task.hpp  weibel.hpp  weibel_gpu.hpp
tests/: launch_adastra_mi250.slurm  launch_adastra_mi300.slurm  launch_jean_zay_a100.slurm  launch_jean_zay_h100.slurm  launch_jean_zay_v100.slurm  launch_ruche_a100.slurm  launch_ruche_cpu.slurm  launch_ruche_v100.slurm  run.py
validation/: beam_gpu.py  default_gpu.py
